<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="act_title_006">Osaifu-Keitai</string>
    <string name="additionalInformation">251201a1</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Osaifu-Keitai app</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="button_back_login">Back</string>
    <string name="button_cancel_model_change">Cancel</string>
    <string name="button_change_login">Changing Account</string>
    <string name="button_confirmation_login">Close</string>
    <string name="button_connect_login">Sign in with Google</string>
    <string name="button_guide_card_reader_announce">Change setting</string>
    <string name="button_label_change_touch_card">Confirm/Switch the maincard</string>
    <string name="button_start_model_change">Upload</string>
    <string name="button_text_add_myservice">Add a service</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_card_reader_user_policy">Precautions</string>
    <string name="button_text_close">Close</string>
    <string name="button_text_copy">Copy</string>
    <string name="button_text_detail_screen_change_to_effective_card">Switch to the maincard</string>
    <string name="button_text_detail_screen_download_card">Download</string>
    <string name="button_text_detail_screen_effective_card">maincard</string>
    <string name="button_text_detail_screen_model_change">Upload Card (changing model)</string>
    <string name="button_text_detail_screen_not_applicable_card">Please wait</string>
    <string name="button_text_detail_screen_recovery_card">Update the status</string>
    <string name="button_text_detail_screen_sp_network_failed">Uploaded card</string>
    <string name="button_text_login">login</string>
    <string name="button_text_login_cancel">Cancel</string>
    <string name="button_text_memory_clear_cancel">Cancel</string>
    <string name="button_text_memory_clear_display_service_reset">Erase data</string>
    <string name="button_text_memory_clear_mfi_card_delete">Transfer</string>
    <string name="button_text_memory_clear_tos_agree">Agree</string>
    <string name="button_text_negative">Cancel</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_positive">OK</string>
    <string name="button_text_recommend_detail_app_download">Download the application</string>
    <string name="button_text_recommend_detail_app_start">Open the application</string>
    <string name="button_text_recommend_detail_site_access">Access the website</string>
    <string name="button_text_retry">Retry</string>
    <string name="button_text_select_felicapocket">FeliCa Pocket</string>
    <string name="button_text_usage_history_detail_screen_see_close">【TBD】 Close</string>
    <string name="button_text_usage_history_detail_screen_see_more">【TBD】 And more</string>
    <string name="button_text_use_mobile_felica">Details are here</string>
    <string name="button_text_use_mobile_felica_felicapocket">Set up the Osaifu-Keitai !</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="card_item_label_available_amt">month available amt</string>
    <string name="card_item_label_balance">Balance</string>
    <string name="card_item_label_currency">Yen</string>
    <string name="card_item_label_detail_screen_balance">Balance</string>
    <string name="card_item_label_detail_screen_balance_currency">Yen</string>
    <string name="card_item_label_detail_screen_card_state_active_card">maincard</string>
    <string name="card_item_label_detail_screen_card_state_failed_get_sp_card">TBD failed get sp</string>
    <string name="card_item_label_detail_screen_card_state_recovery_card">Status-Update-Required card</string>
    <string name="card_item_label_detail_screen_card_state_uploaded_card">Uploaded card</string>
    <string name="card_item_label_detail_screen_colon">：</string>
    <string name="card_item_label_detail_screen_continuity">継続</string>
    <string name="card_item_label_detail_screen_point">Point</string>
    <string name="card_item_label_detail_screen_point_currency">P</string>
    <string name="card_item_label_detail_screen_remind_mail_app_subject">Google account used as \"Sign in with Google\" when downloading transit IC card</string>
    <string name="card_item_label_detail_screen_remind_mail_app_text_1">When downloading the uploaded transit IC card, it is necessary to setup the Google account below to the smartphone after model change, and \"Sign in with Google\" on the Osaifu-Keitai app.\n\n</string>
    <string name="card_item_label_detail_screen_remind_mail_app_text_2" formatted="false">\n\nPlease retain your account information, such as by sending this email to yourself.\n\nFor FAQ on using transit IC card on Android smartphone, please refer to the following page. \nhttps://ap.pitsquare.jp/osaifu/help/?ul_q=%E4%BA%A4%E9%80%9A%E7%B3%BBIC%E3%82%AB%E3%83%BC%E3%83%89%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6%E3%81%AE%E8%B3%AA%E5%95%8F&amp;ul_select_id=c12fea3182aa&amp;ul_select_sid=7876309\n</string>
    <string name="card_item_label_detail_screen_state_sp_network_failed">Uploaded card</string>
    <string name="card_item_label_detail_screen_tilde">～</string>
    <string name="card_item_label_point">Point</string>
    <string name="card_item_label_point_currency">P</string>
    <string name="card_item_label_spend">Available</string>
    <string name="card_item_label_spend_limit">Limit</string>
    <string name="card_item_label_train_detail_screen_period_mark">~</string>
    <string name="card_item_text_now_setting">Set up now</string>
    <string name="card_item_text_setting_not_complete">Setting has not been completed.</string>
    <string name="card_item_text_setting_not_login">\"Sign in with Google\"\nto confirm</string>
    <string name="card_item_text_setting_not_login_for_legacy_suica">\"Sign in with Google\"\nto switch maincard</string>
    <string name="card_item_text_traffic_card">Transit IC Card</string>
    <string name="card_item_text_usage_history_detail_screen_balance">Balance</string>
    <string name="card_item_text_usage_history_detail_screen_balance_currency">Yen</string>
    <string name="card_item_text_usage_history_detail_screen_board">board</string>
    <string name="card_item_text_usage_history_detail_screen_charge">【TBD】 Top-up</string>
    <string name="card_item_text_usage_history_detail_screen_charge_amt">charge amt</string>
    <string name="card_item_text_usage_history_detail_screen_currency">【TBD】 Yen</string>
    <string name="card_item_text_usage_history_detail_screen_other">【TBD】 Other</string>
    <string name="card_item_text_usage_history_detail_screen_payment">【TBD】 Payment</string>
    <string name="card_item_text_usage_history_detail_screen_plus">【TBD】 +</string>
    <string name="card_item_text_usage_history_detail_screen_shop">shopping</string>
    <string name="card_item_text_usage_history_detail_screen_traffic">【TBD】 Transit</string>
    <string name="card_item_text_usage_history_detail_screen_use_amt">used amt</string>
    <string name="card_item_title_detail_screen_collaboration_app">link app</string>
    <string name="card_item_title_detail_screen_other">Items</string>
    <string name="card_item_title_detail_screen_usage_history">【TBD】 Usage History</string>
    <string name="guide_recommend_account_linkage_description">For using iD, QUICPay, Mobile Suica, Mobile PASMO and Mobile ICOCA, login with Google account is required. Press \"Sign in with Google\" in the next screen, and choose the account in the screen after next.</string>
    <string name="guide_recommend_account_linkage_title">About Osaifu-Keitai app\nSign in with Google</string>
    <string name="text_memory_clear_display_service_body">The following services are registered.</string>
    <string name="text_memory_clear_display_service_check">Understood and confirmed Notes</string>
    <string name="text_memory_clear_display_service_detail">Please confirm how to transfer in each service in their perspective webpages.</string>
    <string name="text_memory_clear_display_service_information">Please transfer E-money services before erase.</string>
    <string name="text_memory_clear_display_service_type1_caution_1">All iD and QUICPay cards issued from this device will be deleted, even if it is not listed above.</string>
    <string name="text_memory_clear_mfi_card_body">The following transit cards are registered.</string>
    <string name="text_memory_clear_mfi_card_information">Please transfer cards before erasing data for Osaifu-Keitai services.</string>
    <string name="text_memory_clear_title">Erase data for Osaifu-Keitai services</string>
    <string name="voice_read_check_box_memory_clear_display_service">Understood and confirmed Notes</string>
    <string name="voice_read_toolbar_title_account_sign_in">About Sign in with Google in the Osaifu-Keitai app</string>
</resources>