<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/sv_win_memusage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <TextView
                android:textSize="32sp"
                android:id="@+id/memory_clear_display_service_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/text_memory_clear_title"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/memory_clear_display_service_body_asset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_memory_clear_display_service_body"
                android:contentDescription="@string/text_memory_clear_display_service_body"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib">
                <requestFocus/>
            </TextView>
            <TextView
                android:id="@+id/memory_clear_display_service_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/memory_clear_display_service_type1_caution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_memory_clear_display_service_type1_caution_1"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/memory_clear_display_service_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_memory_clear_display_service_information"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/memory_clear_display_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_memory_clear_display_service_detail"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/layout_memory_clear_display_service_check"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/memory_clear_display_service_check_box"
                    android:focusable="true"
                    android:clickable="true"
                    android:duplicateParentState="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:contentDescription="@string/voice_read_check_box_memory_clear_display_service"
                    style="@style/SudCheckBox.Multiline"/>
                <TextView
                    android:id="@+id/text_memory_clear_display_service_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_memory_clear_display_service_check"
                    style="@style/SudCheckBox.Multiline"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <Button
            android:id="@+id/memory_clear_display_service_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_cancel"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            style="@style/Memory_Clear_Cancel_Button"/>
        <Button
            android:enabled="false"
            android:id="@+id/memory_clear_display_service_next"
            android:background="@drawable/button_memory_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_display_service_reset"
            android:layout_weight="1"
            style="@style/Memory_Clear_Button"/>
    </LinearLayout>
</LinearLayout>
