<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/balanceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_item_label_balance"
        android:layout_alignBaseline="@+id/balanceAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_14_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/balanceAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/balanceLabel"
        android:lineSpacingExtra="1dp"
        style="@style/style_18_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/balanceUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/card_item_label_currency"
        android:layout_toRightOf="@+id/balanceAsset"
        android:layout_alignBaseline="@+id/balanceAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_14_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_item_label_point"
        android:layout_alignBaseline="@+id/pointAsset"
        style="@style/style_14_bold_6C6C6C"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pointAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/pointLabel"
        android:layout_below="@+id/balanceAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_15_medium_6C6C6C"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pointUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/card_item_label_point_currency"
        android:layout_toRightOf="@+id/pointAsset"
        android:layout_alignBaseline="@+id/pointAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_14_bold_6C6C6C"/>
</RelativeLayout>
