<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="20dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <TextView
                    android:textSize="24sp"
                    android:id="@+id/memory_clear_display_service_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_memory_clear_title"
                    style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="48dp">
            <ScrollView
                android:id="@+id/sv_win_memusage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/memory_clear_display_service_body_asset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/text_memory_clear_display_service_body"
                        android:contentDescription="@string/text_memory_clear_display_service_body"
                        style="@style/TextAppearance.PreferenceTitle.SettingsLib">
                        <requestFocus/>
                    </TextView>
                    <TextView
                        android:id="@+id/memory_clear_display_service_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
                    <TextView
                        android:id="@+id/memory_clear_display_service_type1_caution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/text_memory_clear_display_service_type1_caution_1"
                        style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
                    <TextView
                        android:id="@+id/memory_clear_display_service_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/text_memory_clear_display_service_information"
                        style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
                    <TextView
                        android:id="@+id/memory_clear_display_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/text_memory_clear_display_service_detail"
                        style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/layout_memory_clear_display_service_check"
                        android:focusable="true"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <CheckBox
                            android:id="@+id/memory_clear_display_service_check_box"
                            android:focusable="true"
                            android:clickable="true"
                            android:duplicateParentState="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:contentDescription="@string/voice_read_check_box_memory_clear_display_service"
                            style="@style/SudCheckBox.Multiline"/>
                        <TextView
                            android:id="@+id/text_memory_clear_display_service_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_memory_clear_display_service_check"
                            style="@style/SudCheckBox.Multiline"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="end|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="4"
        android:layout_weight="3.5"
        android:layout_marginEnd="10dp">
        <Button
            android:id="@+id/memory_clear_display_service_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_cancel"
            android:layout_weight="1"
            style="@style/Memory_Clear_Cancel_Button"/>
        <Button
            android:enabled="false"
            android:id="@+id/memory_clear_display_service_next"
            android:background="@drawable/button_memory_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_display_service_reset"
            android:layout_weight="1"
            style="@style/Memory_Clear_Button"/>
    </LinearLayout>
</LinearLayout>
