<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="32sp"
                android:id="@+id/memory_clear_mfi_card_delete_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/text_memory_clear_title"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/memory_clear_mfi_card_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_memory_clear_mfi_card_body"
                android:contentDescription="@string/text_memory_clear_mfi_card_body"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib">
                <requestFocus/>
            </TextView>
            <TextView
                android:id="@+id/memory_clear_mfi_card_delete_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
            <TextView
                android:id="@+id/text_memory_clear_mfi_card_body_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_memory_clear_mfi_card_information"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                style="@style/TextAppearance.PreferenceTitle.SettingsLib"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="end|bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="4"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <Button
            android:id="@+id/memory_clear_mfi_card_delete_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_cancel"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            style="@style/Memory_Clear_Cancel_Button"/>
        <Button
            android:id="@+id/memory_clear_mfi_card_delete_next"
            android:background="@drawable/button_memory_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_memory_clear_mfi_card_delete"
            android:layout_weight="1"
            style="@style/Memory_Clear_Button"/>
    </LinearLayout>
</LinearLayout>
